# wdn-sa-benchmark

./: .gitignore  README.md  fdt_example.py  pyproject.toml  t1.py  t_random_sensors_and_leaks.py  t_simple_save.py  wdn_sa_benchmark.py
Struct_Analysis - V2-1.1/: FMSO.m  MTES.m  PSO.m  TES.m  loc_shar.m  pnargin.m  posEqReal.m  ~$stModTool.docx
examples/: HAN_4_0_16.m  HAN_4_0_32.m  TLN_2_0_2.m  TLN_7_0_7.m  convert.py  convert_ltown.py  convert_ltown_skel.py  convert_random.py  fdt.py  fdt_ltown.py  network_preview.py
network_converter/: EpanetConverter.py  mtes_wdn.py  wdn_loop_configurations.py
networks/: BIN.inp  GOY.inp  L-TOWN_simplified.inp  L-TOWN_simplified_node_name_map.json  NYT.inp
output/: L-TOWN_33_3_3.json  L-TOWN_33_3_3_eq_name_map.json  L-TOWN_33_3_3_f_name_map.json  L-TOWN_34_3_3.json  L-TOWN_34_3_3_eq_name_map.json  L-TOWN_34_3_3_f_name_map.json  L-TOWN_34_3_785_f_name_map.json  L-TOWN_simplified_34_3_10.json  L-TOWN_simplified_34_3_100.json  L-TOWN_simplified_34_3_100_f_name_map.json  L-TOWN_simplified_34_3_10_eq_name_map.json  L-TOWN_simplified_34_3_10_f_name_map.json  L-TOWN_simplified_34_3_20_f_name_map.json  L-TOWN_simplified_34_3_295.json  L-TOWN_simplified_34_3_295_f_name_map.json  L-TOWN_simplified_34_3_30.json  L-TOWN_simplified_34_3_30_f_name_map.json
structural_models/: BAK_4_0_36.json  BAK_4_0_36_eq_name_map.json  BIN_7_0_26.json  BIN_7_0_26_eq_name_map.json  BIN_7_0_26_f_name_map.json  BLA_4_0_31.json  BLA_4_0_31_eq_name_map.json  BLA_4_0_31_f_name_map.json  EXN_4_0_38.json  EXN_4_0_38_eq_name_map.json  EXN_4_0_38_f_name_map.json  (+28 more)
(+71 files in other folders)
