[tool.poetry]
name = "wdn-sa-benchmark"
version = "0.0.1"
description = "TODO"
authors = ["Anna Sztyber <TODO>", "TODO"]
license = "LGPL-3.0"

#   TODO: https://pypi.org/classifiers/
classifiers = []
repository = "https://github.com/asztyber/wdn-sa-benchmark"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
wntr = "0.4.1"
faultdiagnosistoolbox = "0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
